--- a/edd-software-specs.css
+++ b/edd-software-specs.css
@@ -1,37 +1,1 @@
-﻿#isa-edd-specs {
-	border:2px #ddd solid;
-	text-align:left;
-	width: auto;
-	margin:2em auto;
-	clear:both;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-}
-#isa-edd-specs thead, 
-#isa-edd-specs th, 
-#isa-edd-specs caption {
-	background:#ccc;
-	padding:10px 0px;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#dddddd');
-	background: -webkit-gradient(linear, left top, left bottom, from(#efefef), to(#ddd));
-	background: -moz-linear-gradient(top,  #efefef,  #ddd);
-	behavior: url(ie-css3.htc);
-}
-#isa-edd-specs caption {
-	text-align:center;
-	font-weight:bold;
-	margin: 0; 
-}
-#isa-edd-specs td {
-	border: 1px solid rgb(216, 216, 216);
-	font-size:97%;
-}
-#isa-edd-specs td, 
-#isa-edd-specs th {
-	padding-left:10px;
-	padding-right:10px;
-}
-#isa-edd-specs td:hover {
-	background-color:#e1e1e1;
-}
+﻿#isa-edd-specs {border:2px #ddd solid;text-align:left;width: auto;margin:2em auto;clear:both;-moz-border-radius: 3px;-webkit-border-radius: 3px;border-radius: 3px;}#isa-edd-specs thead, #isa-edd-specs th, #isa-edd-specs caption {	background:#ccc;padding:10px 0px;filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#dddddd');background: -webkit-gradient(linear, left top, left bottom, from(#efefef), to(#ddd));background: -moz-linear-gradient(top,  #efefef,  #ddd);behavior: url(ie-css3.htc);}#isa-edd-specs caption {	text-align:center;font-weight:bold;margin: 0; }#isa-edd-specs td {	border: 1px solid rgb(216, 216, 216);font-size:97%;}#isa-edd-specs td, #isa-edd-specs th {	padding-left:10px;padding-right:10px;}#isa-edd-specs td:hover {	background-color:#e1e1e1;}
